rocket_codegen-0.5.1/tests/ui-fail-stable/route-type-errors.stderr
error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
 --> tests/ui-fail-stable/route-type-errors.rs:6:13
  |
6 | fn f0(_foo: Q) {}
  |             ^ the trait `FromParam<'_>` is not implemented for `Q`
  |
  = help: the following other types implement trait `FromParam<'a>`:
            bool
            isize
            i8
            i16
            i32
            i64
            i128
            usize
          and $N others

error[E0277]: the trait bound `Q: FromSegments<'_>` is not satisfied
 --> tests/ui-fail-stable/route-type-errors.rs:9:13
  |
9 | fn f1(_foo: Q) {}
  |             ^ the trait `FromSegments<'_>` is not implemented for `Q`
  |
  = help: the following other types implement trait `FromSegments<'r>`:
            <Segments<'r, rocket::http::uri::fmt::Path> as FromSegments<'r>>
            <PathBuf as FromSegments<'_>>
            <std::option::Option<T> as FromSegments<'r>>
            <Result<T, <T as FromSegments<'r>>::Error> as FromSegments<'r>>

error[E0277]: the trait bound `Q: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-stable/route-type-errors.rs:12:13
   |
12 | fn f2(_foo: Q) {}
   |             ^ the trait `FromFormField<'_>` is not implemented for `Q`, which is required by `Q: FromForm<'_>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `Q` to implement `FromForm<'_>`

error[E0277]: the trait bound `Q: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-stable/route-type-errors.rs:15:13
   |
15 | fn f3(_foo: Q) {}
   |             ^ the trait `FromFormField<'_>` is not implemented for `Q`, which is required by `Q: FromForm<'_>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `Q` to implement `FromForm<'_>`

error[E0277]: the trait bound `Q: FromData<'_>` is not satisfied
  --> tests/ui-fail-stable/route-type-errors.rs:18:13
   |
18 | fn f4(_foo: Q) {}
   |             ^ the trait `FromData<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromData<'r>`:
             rocket::Data<'r>
             Cow<'_, str>
             Capped<Cow<'_, str>>
             Capped<Vec<u8>>
             Capped<std::string::String>
             Capped<TempFile<'_>>
             Capped<&'r str>
             Capped<&'r RawStr>
           and $N others

error[E0277]: the trait bound `Q: FromRequest<'_>` is not satisfied
  --> tests/ui-fail-stable/route-type-errors.rs:21:11
   |
21 | fn f5(_a: Q, _foo: Q) {}
   |           ^ the trait `FromRequest<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromRequest<'r>`:
             ProxyProto<'r>
             Method
             Outcome<T, (Status, <T as FromRequest<'r>>::Error), Status>
             Flash<&'r CookieJar<'r>>
             rocket::Shutdown
             IpAddr
             std::net::SocketAddr
             std::option::Option<T>
           and $N others

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> tests/ui-fail-stable/route-type-errors.rs:21:20
   |
21 | fn f5(_a: Q, _foo: Q) {}
   |                    ^ the trait `FromParam<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromParam<'a>`:
             bool
             isize
             i8
             i16
             i32
             i64
             i128
             usize
           and $N others

error[E0277]: the trait bound `Q: FromRequest<'_>` is not satisfied
  --> tests/ui-fail-stable/route-type-errors.rs:24:11
   |
24 | fn f6(_a: Q, _foo: Q, _good: usize, _bar: Q) {}
   |           ^ the trait `FromRequest<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromRequest<'r>`:
             ProxyProto<'r>
             Method
             Outcome<T, (Status, <T as FromRequest<'r>>::Error), Status>
             Flash<&'r CookieJar<'r>>
             rocket::Shutdown
             IpAddr
             std::net::SocketAddr
             std::option::Option<T>
           and $N others

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> tests/ui-fail-stable/route-type-errors.rs:24:20
   |
24 | fn f6(_a: Q, _foo: Q, _good: usize, _bar: Q) {}
   |                    ^ the trait `FromParam<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromParam<'a>`:
             bool
             isize
             i8
             i16
             i32
             i64
             i128
             usize
           and $N others

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> tests/ui-fail-stable/route-type-errors.rs:24:43
   |
24 | fn f6(_a: Q, _foo: Q, _good: usize, _bar: Q) {}
   |                                           ^ the trait `FromParam<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromParam<'a>`:
             bool
             isize
             i8
             i16
             i32
             i64
             i128
             usize
           and $N others
